Plugin store hovered plugins less annoying

--- a/html/css/less/cloud_plugins.less
+++ b/html/css/less/cloud_plugins.less
@@ -148,12 +148,11 @@
       transition: all 0.33s;
       cursor: pointer;
       &:hover {
-        background-color: @brand-primary;
+        background-color: black;
         .description {
-          background: rgba(136, 57, 150, 0.8);
+          background: rgba(0, 0, 0, 0.8);
           hr {
-            border: none;
-            border-bottom: 1px solid #212121;
+            border-color: @brand-warning;
           }
         }
         figure {
