Pedalboards: entire pedalboard DOMNode clickable

--- a/html/css/less/pedalboards.less
+++ b/html/css/less/pedalboards.less
@@ -69,6 +69,7 @@
       position: relative;
       background: transparent url(../img/loading-pedalboard.gif) center center no-repeat;
       transition: all 0.33s;
+      cursor: pointer;
       &:hover {
         background-color: @brand-primary;
       }
