Fix missing loading animation in pedalboards, add a broken image icon if loading fails; fixes MD-958

--- a/html/include/pedalboard.html
+++ b/html/include/pedalboard.html
@@ -7,7 +7,5 @@
             <span class="js-remove delete" style="float:right"></span>
         </span>
     </div>
-    <div class="img">
-        <img src="{{image}}" alt=""/>
-    </div>
+    <div class="img"></div>
 </div>
