--- a/html/css/less/pedalboards.less
+++ b/html/css/less/pedalboards.less
@@ -67,16 +67,19 @@
       margin: 0 0 1.5% 1.5%;
       width: 31.3%;
       position: relative;
-      background: transparent url(../img/loading-pedalboard.gif) center center no-repeat;
+      background-color: transparent;
+      background-image: url(../img/background.jpg);
+      background-position: center center;
+      background-repeat: repeat;
+      background-size: auto 100%;
       transition: all 0.33s;
       cursor: pointer;
       &:hover {
-        background-color: @brand-primary;
+        .info {
+          background-color: @brand-primary;
+        }
       }
       .img {
-        background: url(../img/background.jpg);
-        background-size: auto 100%;
-        background-position: center center;
         box-shadow: inset 0 3px 6px black;
         border: 1px solid #000;
         display: block;
@@ -84,17 +87,21 @@
         height: 15vw;
         overflow: hidden;
         text-align: center;
-        img {
-          cursor: pointer;
-          height: 100%;
-          width: auto;
-          margin: auto;
+        background-image: url(../img/loading-pedalboard.gif);
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: auto;
+        &.loaded {
+            background-size: contain;
+        }
+        &.broken {
+            background-image: url(../img/icons/broken_image.svg);
+            background-size: auto 50%;
         }
       }
       .info {
-        height: 32px;
-        padding-left: 5px;
-        background: rgba(255,255,255,0.07);
+        background-color: #2c2c2c;
+        transition: background-color 0.33s;
       }
       .title {
         display: block;
