--- a/html/css/main.css
+++ b/html/css/main.css
@@ -6780,17 +6780,18 @@ button.close {
   margin: 0 0 1.5% 1.5%;
   width: 31.3%;
   position: relative;
-  background: transparent url(../img/loading-pedalboard.gif) center center no-repeat;
+  background-color: transparent;
+  background-image: url(../img/background.jpg);
+  background-position: center center;
+  background-repeat: repeat;
+  background-size: auto 100%;
   transition: all 0.33s;
   cursor: pointer;
 }
-#pedalboards-library .pedalboards .pedalboard:hover {
+#pedalboards-library .pedalboards .pedalboard:hover .info {
   background-color: #883996;
 }
 #pedalboards-library .pedalboards .pedalboard .img {
-  background: url(../img/background.jpg);
-  background-size: auto 100%;
-  background-position: center center;
   box-shadow: inset 0 3px 6px black;
   border: 1px solid #000;
   display: block;
@@ -6798,17 +6799,21 @@ button.close {
   height: 15vw;
   overflow: hidden;
   text-align: center;
+  background-image: url(../img/loading-pedalboard.gif);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: auto;
 }
-#pedalboards-library .pedalboards .pedalboard .img img {
-  cursor: pointer;
-  height: 100%;
-  width: auto;
-  margin: auto;
+#pedalboards-library .pedalboards .pedalboard .img.loaded {
+  background-size: contain;
+}
+#pedalboards-library .pedalboards .pedalboard .img.broken {
+  background-image: url(../img/icons/broken_image.svg);
+  background-size: auto 50%;
 }
 #pedalboards-library .pedalboards .pedalboard .info {
-  height: 32px;
-  padding-left: 5px;
-  background: rgba(255, 255, 255, 0.07);
+  background-color: #2c2c2c;
+  transition: background-color 0.33s;
 }
 #pedalboards-library .pedalboards .pedalboard .title {
   display: block;
