--- a/html/css/main.css
+++ b/html/css/main.css
@@ -6803,6 +6803,7 @@ button.close {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: auto;
+  position: relative;
 }
 #pedalboards-library .pedalboards .pedalboard .img.loaded {
   background-size: contain;
@@ -6810,6 +6811,20 @@ button.close {
 #pedalboards-library .pedalboards .pedalboard .img.broken {
   background-image: url(../img/icons/broken_image.svg);
   background-size: auto 50%;
+}
+#pedalboards-library .pedalboards .pedalboard.broken .img::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 10;
+  background-color: rgba(17, 17, 17, 0.5);
+  background-image: url(../img/icons/broken_pedal.svg);
+  background-size: auto 50%;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 #pedalboards-library .pedalboards .pedalboard .info {
   background-color: #2c2c2c;
