--- a/html/include/pedalboard.html
+++ b/html/include/pedalboard.html
@@ -1,4 +1,4 @@
-<div class="pedalboard js-load">
+<div class="pedalboard js-load {{broken}}">
     <div class="info">
         <span class="title">{{title}}</span>
         <span class="actions">
