Switch blocked icon to SVG

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -1225,7 +1225,8 @@ header#pedalboard-actions {
   }
 }
 .blocker.screen-disconnected {
-  background: rgba(17,17,17,.9) url(../img/icons/block.png) 50% 50% no-repeat;
+  background: rgba(17,17,17,.9) url(../img/icons/blocked.svg) 50% 50% no-repeat;
+  background-size: 100px 100px;
   .button {
     position: absolute;
     top: 50%;
