Make plugins appear at the exact same position where dragging of the preview thumb started

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -796,6 +796,7 @@ header#pedalboard-actions {
         height: auto;
         margin: 0 auto 3px;
         width: auto;
+        pointer-events: none;
       }
       .plugins-wrapper .plugin .status {
         display: block;
