--- a/html/css/main.css
+++ b/html/css/main.css
@@ -7668,6 +7668,7 @@ header#pedalboard-actions {
   height: auto;
   margin: 0 auto 3px;
   width: auto;
+  pointer-events: none;
 }
 #plugins-library #plugins-list .plugins-wrapper .plugin .status {
   display: block;
