--- a/html/include/cloudplugin.html
+++ b/html/include/cloudplugin.html
@@ -1,4 +1,4 @@
-<div class="cloud-plugin available-plugin js-available-effect" mod-role="cloud-plugin">
+<div class="cloud-plugin available-plugin js-available-effect" mod-role="cloud-plugin" mod-plugin-id="{{id}}">
     <figure class="thumb" style="background-image: url('{{screenshot_href}}');"></figure>
     <div class="description">
         <span class="title">{{label}}</span>
