Make xruns a proper clickable button

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -375,7 +375,7 @@ hr.dotted {
     }
   }
 
-  #mod-cpu, #mod-ram, #mod-xruns {
+  #mod-cpu, #mod-ram {
     cursor: default;
     width: 115px !important;
     padding: 0 !important;
@@ -394,11 +394,9 @@ hr.dotted {
     background-repeat: no-repeat;
     padding-left: 30px;
   }
-  #mod-xruns .progress-title {
+  #mod-xruns {
     background-image: url(../img/icons/25/cpu.png);
-    background-position: 0px 50%;
-    background-repeat: no-repeat;
-    padding-left: 30px;
+    width: 115px !important;
   }
 
     .progress {
