--- a/html/include/cloudplugin.html
+++ b/html/include/cloudplugin.html
@@ -1,4 +1,4 @@
-<div class="cloud-plugin available-plugin js-available-effect" mod-role="cloud-plugin">
+<div class="cloud-plugin available-plugin js-available-effect" mod-role="cloud-plugin" mod-uri="{{uri}}>
     <figure class="thumb" style="background-image: url('{{screenshot_href}}');"></figure>
     <div class="description">
         <span class="title">{{label}}</span>
@@ -7,9 +7,4 @@
         <p class="{{has_comment}}">{{comment}}<span class="limiter"></span></p>
     </div>
     <span class="status {{status}}"></span>
-
-    <!--
-    <span class="rating four"></span>
-    <span class="downloads">{{downloads}}</span>
-    -->
 </div>
