--- a/html/css/dashboard.css
+++ b/html/css/dashboard.css
@@ -815,7 +815,7 @@ svg .connecting-light { fill: none; stroke: #6FF; stroke-width: 1; z-index: 1000
 #share-window-wrapper {
 	height: 360px;
 }
-#share-window-fb {
+#share-window-bottom {
 	border-top: 1px solid #ddd;
 	display: block;
 	width: 600px;
@@ -823,7 +823,8 @@ svg .connecting-light { fill: none; stroke: #6FF; stroke-width: 1; z-index: 1000
 	padding-top: 5px;
 }
 
-#share-window-fb label {
+/*
+#share-window-bottom label {
 	background: url("../img/facebook-menu-sprite.png") no-repeat top right;
 	height: 36px;
 	width: 210px;
@@ -831,9 +832,10 @@ svg .connecting-light { fill: none; stroke: #6FF; stroke-width: 1; z-index: 1000
 	margin-bottom: -6px;
 }
 
-#share-window-fb input {
+#share-window-bottom input {
 	vertical-align: baseline;
 }
+*/
 
 #fb-authorization-container {
     float: left;
