--- a/html/css/main.css
+++ b/html/css/main.css
@@ -7380,7 +7380,7 @@ header#pedalboard-actions .drop-menu .sub-menu,
   list-style-type: none;
   padding: 0;
   position: absolute;
-  margin-left: 5em;
+  left: 150px;
   height: 14em;
   overflow-y: auto;
   overflow-x: hidden;
