--- a/html/css/pedals.css
+++ b/html/css/pedals.css
@@ -332,6 +332,24 @@ body > .mod-settings.mod-window-visible {
     width:160px;
 }
 
+.mod-presets {
+    width: 320px !important;    
+}
+.radio-preset {
+    height: 9px !important;
+    width: 9px !important;
+    margin: 0 !important;
+}
+.mod-presets .btn {
+    font-size: 10px;
+    border-radius: 2px;
+    margin-top: 5px;
+    font-weight: bold;
+    background-color: black;
+    text-transform: uppercase !important;
+}
+
+
 .mod-pedal-settings .mod-enumerated .mod-enumerated-list {
     color:#fff;
     height:103px;
