--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -503,6 +503,7 @@ header#pedalboard-actions,
     padding: 0;
     background-color: rgba(0,0,0,0.3);
     color: #999;
+    width: 150px;
     li {
       padding: 5px 20px;
       &:hover {
