--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -571,6 +571,11 @@ header#pedalboard-actions,
             background-color: @brand-primary;
         }
     }
+    &.js-share {
+      background-image: url(../img/icn-share.png);
+      background-size: 32px;
+      background-position: 5px center;
+    }   
   }
   h1 {
     font-weight: 2em;
