Tweaks to preset addressing window

--- a/html/include/bypass_addressing.html
+++ b/html/include/bypass_addressing.html
@@ -1,6 +1,6 @@
 <div class="mod-pedal-settings-address">
     <div class="mod-box">
-        <h1>{{plugin.label}} - <strong>Bypass</strong></h1>
+        <h1>{{label}} - <strong>{{name}}</strong></h1>
         <hr />
         <form class="bottom form">
             <div class="mod form-group clearfix">
