--- a/html/css/dashboard.css
+++ b/html/css/dashboard.css
@@ -810,6 +810,17 @@ svg .connecting-light { fill: none; stroke: #6FF; stroke-width: 1; z-index: 1000
     background-color: #55acee !important;
     color: white;
 }
+#share-window input.share-url {
+    margin: 5px auto;
+    display: block;
+    width: 50%;
+    border: 1px solid #e1e1e1;
+    padding-left: 5px;
+}
+#share-window input.share-url::selection {
+    background-color: #883996;
+    color: white;
+}
 #share-window h3 {
     text-align: center;
     margin-bottom: 1em;
