added 'name' and 'email' fields on share window

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -6991,6 +6991,15 @@ body {
 * {
   font-family: "cooper hewitt", Sans-serif !important;
 }
+.unpadded {
+  padding: 0 !important;
+}
+.unpadded-r {
+  padding: 0 0 0 7px;
+}
+.unpadded-l {
+  padding: 0 7px 0 0;
+}
 .ui-draggable:active {
   cursor: -webkit-grabbing !important;
 }
