--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -54,7 +54,7 @@
 
 // Components w/ JavaScript
 // @import "../node_modules/bootstrap/less/modals.less";
-// @import "../node_modules/bootstrap/less/tooltip.less";
+@import "../node_modules/bootstrap/less/tooltip.less";
 // @import "../node_modules/bootstrap/less/popovers.less";
 // @import "../node_modules/bootstrap/less/carousel.less";
 
