Put blocker below notification; Show blocker on pedalboard reset

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -520,7 +520,7 @@ header#pedalboard-actions,
         color: white;
         background-color: @brand-primary;
       }
-    }  
+    }
     .sub-menu {
       &:hover {
         display: block;
@@ -546,7 +546,7 @@ header#pedalboard-actions,
   }
   .sub-menu-trigger:hover {
     ul {
-      display: block; 
+      display: block;
     }
   }
   button {
@@ -585,7 +585,7 @@ header#pedalboard-actions,
       background-image: url(../img/icn-share.png);
       background-size: 32px;
       background-position: 5px center;
-    }   
+    }
   }
   h1 {
     font-weight: 2em;
@@ -1282,7 +1282,7 @@ header#pedalboard-actions {
   top: 0;
   left: 0;
   text-align: center;
-  z-index: 10000000;
+  z-index: 99999;
   p {
       position: absolute;
       top: 50%;
