s/mod-bluetooth/mod-status/ + s/mod-settings/mod-update/

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -429,7 +429,7 @@ hr.dotted {
     margin-right: -1px;
   }
 
-  #mod-settings {
+  #mod-update {
     background-image: url(../img/menu-icons-sprite.png);
     background-position: -182px bottom;
     &.uptodate {
@@ -438,7 +438,7 @@ hr.dotted {
     }
   }
 
-  #mod-bluetooth {
+  #mod-status {
     background-image: url(../img/menu-icons-sprite.png);
     background-position: -225px top;
     &.online {
