--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -171,7 +171,7 @@ body {
   bottom: 0;
   left: 0;
   min-width: 980px;
-  overflow: auto;
+  overflow: hidden;
   position: absolute;
   right: 0;
   top: 0;
