--- a/html/css/main.css
+++ b/html/css/main.css
@@ -7124,7 +7124,7 @@ body {
   bottom: 0;
   left: 0;
   min-width: 980px;
-  overflow: auto;
+  overflow: hidden;
   position: absolute;
   right: 0;
   top: 0;
