--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -424,38 +424,27 @@ hr.dotted {
     background-repeat: no-repeat;
     border-color: #2b2b2b;
     border-style: solid;
-    border-width: 0 1px 0 1px;
+    border-width: 0 0 0 1px;
     float: right;
   }
 
   #mod-update {
-    background-image: url(../img/menu-icons-sprite.png);
-    background-position: -182px bottom;
+    background-image: url(../img/icons/36/update.png);
     &.uptodate {
-      background-color: #000;
-      background-position: -182px top;
+      background-image: url(../img/icons/36/ok.png);
     }
   }
 
   #mod-status {
-    background-image: url(../img/menu-icons-sprite.png);
-    background-position: -225px top;
-    margin-right: -1px;
+    background-image: url(../img/icons/36/disconnect.png);
     &.online {
-      background-color: #000;
-      background-position: -225px bottom;
+      background-image: url(../img/icons/36/disconnect.png);
     }
   }
   #mod-cloud {
-    background-image: url(../img/menu-icons-sprite.png);
-    background-position: -270px top;
-    &.logged {
-      background-color: #000;
-      background-position: -270px bottom;
-    }
+    background-image: url(../img/icons/36/cloud.png);
     &.online {
-      background-color: #000;
-      background-position: -270px bottom;
+      background-image: url(../img/icons/36/cloud.png);
     }
   }
 }
