--- a/html/css/main.css
+++ b/html/css/main.css
@@ -7388,7 +7388,7 @@ hr.dotted {
   background-repeat: no-repeat;
   border-color: #2b2b2b;
   border-style: solid;
-  border-width: 0 1px 0 1px;
+  border-width: 0 0 0 1px;
   float: right;
 }
 #main-menu #mod-update {
@@ -7399,10 +7399,15 @@ hr.dotted {
 }
 #main-menu #mod-status {
   background-image: url(../img/icons/36/disconnect.png);
-  margin-right: -1px;
 }
 #main-menu #mod-status.online {
   background-image: url(../img/icons/36/disconnect.png);
+}
+#main-menu #mod-cloud {
+  background-image: url(../img/icons/36/cloud.png);
+}
+#main-menu #mod-cloud.online {
+  background-image: url(../img/icons/36/cloud.png);
 }
 /* TOP MENUS */
 header#pedalboard-actions,
