Add icon to install & update all buttons

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -443,12 +443,19 @@ hr.dotted {
   }
   #mod-cloud {
     background-image: url(../img/icons/36/cloud.png);
-    &.online {
-      background-image: url(../img/icons/36/cloud.png);
-    }
   }
 }
 
+#cloud_install_all {
+  background-image: url(../img/icons/36/save.png);
+  float: right;
+  font-size: 21px;
+}
+#cloud_update_all {
+  background-image: url(../img/icons/36/update.png);
+  float: right;
+  font-size: 21px;
+}
 
 /* TOP MENUS */
 
