--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -344,7 +344,7 @@ hr.dotted {
   }
   #mod-add-midi,
   .mod-bypass,
-  #mod-cpu, #mod-ram, #mod-xruns {
+  #mod-cpu, #mod-ram, #mod-xruns, #mod-buffersize {
     background-position: 8px 50%;
     background-repeat: no-repeat;
     padding-left: 40px;
@@ -396,6 +396,10 @@ hr.dotted {
   #mod-xruns {
     background-image: url(../img/icons/25/cpu.png);
     width: 115px !important;
+  }
+  #mod-buffersize {
+    background-image: url(../img/icons/25/cpu.png);
+    width: 125px !important;
   }
 
     .progress {
