Make some cursors non-webkit specific

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -161,6 +161,7 @@ body {
 
 .ui-draggable:active {
   cursor: -webkit-grabbing !important;
+  cursor: grabbing !important;
  }
 
 
@@ -850,6 +851,7 @@ header#pedalboard-actions {
         position: relative;
         &:active {
           cursor: -webkit-grabbing !important;
+          cursor: grabbing !important;
         }
       }
       .plugins-wrapper .plugin .thumb img {
@@ -1332,6 +1334,7 @@ header#pedalboard-actions {
 .drag-handle {
   bottom: 0;
   cursor: -webkit-grabbing !important;
+  cursor: grabbing !important;
   left: 0;
   position: absolute;
   right: 0;
