--- a/html/css/dashboard.css
+++ b/html/css/dashboard.css
@@ -483,6 +483,7 @@ svg .shadow {
     stroke-width: 10;
     z-index: -1;
     -webkit-transform: translateY(1px);
+    transform: translateY(1px);
 }
 svg .cable {
     fill: none;
@@ -496,6 +497,7 @@ svg .light {
     stroke-width: 1.5;
     z-index: 1;
     -webkit-transform: translateY(1px);
+    transform: translateY(1px);
 }
 
 .mod-midi svg .shadow {
@@ -520,7 +522,7 @@ svg .light {
 
 svg .connecting-shadow { fill: none; stroke: #077; stroke-width: 10; z-index: 1000; }
 svg .connecting-cable { fill: none; stroke: #0AA; stroke-width: 8; z-index: 1000; }
-svg .connecting-light { fill: none; stroke: #6FF; stroke-width: 1; z-index: 1000; -webkit-transform: translateY(2px) }
+svg .connecting-light { fill: none; stroke: #6FF; stroke-width: 1; z-index: 1000; -webkit-transform: translateY(2px); transform: translateY(2px); }
 
 
 /* = PEDALBOARD - ADDRESSING
